# prepChAIHack

./: README.md  install.sh  pyproject.toml
legal_vectorizer/: generate_vector_store.py  query.py
legal_vectorizer/chroma_db/: chroma.sqlite3
